<resources>
    <string name="tint_task_text">Введите задачу</string>
    <string name="content_description_importance">важность</string>
    <string name="importance">Важность</string>
    <string name="content_description_deadline">срок выполнения</string>
    <string name="tools_deadline_title">Выбрать дату</string>
    <string name="content_description_close">закрыть</string>
    <string name="save">сохранить</string>
    <string name="delete">удалить</string>
    <string name="date_picker_title">выбрать дату</string>
    <string name="low_importance">низкая</string>
    <string name="basic_importance">обычная</string>
    <string name="important_importance">высокая</string>
</resources>